MCAPackagingOrg/src/objects/SWDefaultFilters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The Submission Wizard by default only filters against the criteria for which the fields are checked in the above custom setting</description>
    <fields>
        <fullName>Attachments_Selected_on_Load__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Attachments Selected on Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avg_Daily_Balance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avg Daily Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Industry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_NDBs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Max NDBs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_NSFs__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Max NSFs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Deposits1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly Deposits $</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Deposits__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Monthly Deposits #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Programs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Programs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_in_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Years in Business</label>
        <type>Checkbox</type>
    </fields>
    <label>SWDefaultFilters</label>
</CustomObject>